dmp 1888 Added hearing list